--- a/src/example_config.ini
+++ b/src/example_config.ini
@@ -4,3 +4,23 @@ control_user=
 control_password=
 
 
+;
+; Default values for server configs when calling "blueprint execute" to deploy new servers
+; Parameters in the blueprint.json file and command line opts will supercede these values
+;
+[blueprint_execute]
+;; Server type
+;type=Standard
+
+;; Server password
+;password=F00b@r
+
+;; 32 digit uuid associated with group target
+;group_id=
+
+;; network name associated with target
+;network=vlan_2384_10.40.64
+
+;; dns resolvers to configure on new server
+;dns = 8.8.8.8
+
